# university-projects

./: .gitattributes  README.md
ai/AiProj1/: AiProj1.cbp  CMakeLists.txt  main.cpp  Τεχνητή Νοημοσύνη Εργασία 1.docx
ai/AiProj1/include/: moveTypes.h  orchestrator.h  puzzleBoard.h
ai/AiProj1/src/: moveTypes.cpp  orchestrator.cpp  puzzleBoard.cpp
ai/AiProj2/: domain.pddl  problem.pddl
algorithms/project-1/: README  input.txt
algorithms/project-1/src/: Mines.java
algorithms/project-2/: input.txt
algorithms/project-2/src/: Cores.java  README
compiler-design/: Example 1.mix  Primes.mix  README  ex2.mix  ex2.txt  ex3_error.txt  report.tex
compiler-design/Examples/: Complex Literal Math.teo  Complex Mixed Math (Float).teo  Complex Mixed Math.teo  Complex Variable Math.teo  Example 1.teo  Float Print (Negative) 2.teo  Float print (Negative) .teo  Float print.teo  If-else.teo  Nested Loop 1.teo  Nester Loop 2.teo  Primes.teo  Simple for (Float).teo  Simple for.teo  Simple if-for.teo  Trimmed For.teo
compiler-design/Examples/Abnormal/: Error-Undeclared variable.teo  Warning-Float value to int variable.teo
compiler-design/Source/: build.gradle  compiler-project-kotlin.ipr  settings.gradle
cryptography/: CMakeLists.txt  README
cryptography/crypto_shared/: CMakeLists.txt
cryptography/crypto_shared/include/crypto_shared/: UserInputOutput.h  Util.h
cryptography/crypto_shared/src/: UserInputOutput.cpp  Util.cpp
cryptography/ex2/: CMakeLists.txt  main-aes-cbc.cpp  main-aes-ecb.cpp  main-camellia-cbc.cpp  main-camellia-ecb.cpp
cryptography/ex2/include/: util.h
cryptography/ex2/src/: util.cpp
cryptography/ex3/: CMakeLists.txt  main.cpp
cryptography/ex8/: CMakeLists.txt  main.cpp
cryptography/ex8/aes/: CMakeLists.txt
cryptography/otp/: CMakeLists.txt  main.cpp
cryptography/otp/include/: Processing.h
cryptography/otp/src/: Processing.cpp
cryptography/rc4/: CMakeLists.txt  main.cpp
cryptography/rc4/include/: RC4.h
cryptography/rc4/src/: RC4.cpp
data-structures/: .travis.yml  CMakeLists.txt  LICENSE  README  README.md  main.cpp  report.tex
data-structures/include/: AVLTree.h  Graph.h  HashTable.h  List.h  MaxHeap.h  Minh.h  Stack.h  super.h
data-structures/src/: AVLTree.cpp  Graph.cpp  HashTable.cpp  MaxHeap.cpp  Minh.cpp
database-technology/: CMakeLists.txt  README  download.sh  main.cpp
database-technology/include/: Benchmarks.h  Block.h  Database.h  Point.h  helper_queue.h
database-technology/include/index/: Entry.h  Index.h  Leaf.h  NonLeaf.h  Rectangle.h
database-technology/include/xml/: OsmImporter.h
database-technology/src/: Benchmarks.cpp  Block.cpp  Database.cpp  Point.cpp
database-technology/src/index/: Index.cpp  Leaf.cpp  NonLeaf.cpp  Rectangle.cpp
database-technology/src/xml/: OsmImporter.cpp
digital-communications/digital-communications-crc/: CMakeLists.txt  README  main.cpp
digital-communications/digital-communications-crc/include/: CRCManager.h
digital-communications/digital-communications-crc/src/: CRCManager.cpp
digital-communications/lab8/: README  ask.m  bfsk.m  bpsk.m  dpsk.m  qam8.m
human-computer-interaction/: README
information-retrieval/: .gitignore  README  THIRD-PARTY-LICENSES.md  environment.yml
information-retrieval/src/: do.py  test.py
information-retrieval/src/test/: test_imports.py  test_index_gen.py  test_teo.py
knowledge-systems/: README  chemicals.pins  chemicals.pont  chemicals.pprj  chems.clp  chemsclips.clp
logic-programming/: 3294.pl  README  houses.pl  requests.pl
networks/: README  settings.gradle.kts
networks/app/: build.gradle.kts
numeric-analysis/numal-project-1/: .gitignore  README  report.tex
numeric-analysis/numal-project-2/: README  report.tex
numeric-analysis/numal-project-2/resources/: graph.eps  opap2.eps  opap3.eps  opap4.eps
object-oriented-programming/: README
object-oriented-programming/puzzles/killer/: 1.json  10.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
object-oriented-programming/puzzles/sudoku/: Sudoku_1  Sudoku_10  Sudoku_2  Sudoku_3  Sudoku_4  Sudoku_5  Sudoku_6  Sudoku_7  Sudoku_8  Sudoku_9
object-oriented-programming/puzzles/users/: user.txt
object-oriented-programming/src/: Main.java
object-oriented-programming/src/SudokuInterface/: GameWindow.java  MainMenu.java  SudokuBoard.java  SudokuBox.java  Wordoku.java
object-oriented-programming/src/SudokuLogic/: AI.java  Board.java  KillerSudokuGroup.java  Puzzle.java  PuzzleDuidoku.java  PuzzleKillerSudoku.java  PuzzleLoader.java  PuzzleSudoku.java  User.java  UserManager.java
operating-systems/: README
operating-systems/code/: BestFit.java  CPU.java  FCFS.java  FirstFit.java  MMU.java  MemoryAllocationAlgorithm.java  MemoryAlwaysYes.java  MemorySlot.java  NextFit.java  PC.java  Process.java  ProcessControlBlock.java  RoundRobin.java  SJF.java  Scheduler.java  WorstFit.java
operating-systems/test/: BestFitTest.java  CalculateFreeSlotsTest.java  DummyAlgorithm.java  FCFSTest.java  RoundRobinTest.java  SJFTest.java  SampleTest.java  WorstFitTest.java
semantic-web/: README  cinema.owl
signals-and-systems/: CMakeLists.libsndfile.in  CMakeLists.txt  README  main.cpp
signals-and-systems/Helper/: CMakeLists.txt
signals-and-systems/Helper/include/UserInteraction/: UI.h
signals-and-systems/Helper/include/Utils/: Utils.h
signals-and-systems/Helper/src/: UI.cpp
signals-and-systems/include/: Ex1.h  Ex2.h  MyConvolve.h
signals-and-systems/report/: report.tex
signals-and-systems/src/: Ex1.cpp  Ex2.cpp
signals-and-systems/test/: Convolution.cpp
software-engineering/: README
(+95 files in other folders)
